# customer-service-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/agent/: confidence.py  finalize.py  prompts.py  react_agent.py  tools_adapter.py
app/config/: Untitled  settings.py
app/graph/: builder.py  state.py
app/graph/nodes/: agent.py  finalize.py  retrieval.py  tools.py  triage.py
app/ingestion/: chunking.py  loaders.py  normalize.py
app/llm/: __init__.py  models.py
app/memory/: checkpoints.py  trimming.py
app/rag/: answer.py
app/retrieval/: bm25.py  hybrid.py  kb_loader.py  rerank.py  vector_store.py
app/tools/: audit.py  executor.py  factory.py  implementations.py  policies.py  registry.py  schemas.py  store.py  types.py
app/utils/: __init__.py  logging.py
customer_service_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/processed/audit/: tool_calls.jsonl
data/processed/kb/: manifest.json
data/processed/kb/bm25/: bm25.pkl
data/processed/kb/faiss/: index.faiss  index.pkl
data/raw/: sample.md
data/state/: agent_state.sqlite  agent_state.sqlite-shm
scripts/: build_bm25_only.py  build_kb.py  build_vector_only.py  chat_graph.py  chat_react.py  query_kb.py  tool_smoke_test.py
