[project]
name = "customer-service-agent"
version = "0.1.0"
description = "Production-grade customer service AI agent using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]

dependencies = [
  # Core
  "langchain>=0.2.0",
  "langgraph>=0.0.40",
  "langchain-openai>=0.1.0",
  "langchain-community>=0.2.0",

  # API
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",

  # Data & Retrieval
  "faiss-cpu>=1.8.0",
  "rank-bm25>=0.2.2",
  "tiktoken>=0.6.0",

  # Ingestion
  "pypdf>=4.0.0",
  "beautifulsoup4>=4.12.3",

  # Utilities
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",

  # Validation helpers (REQUIRED for EmailStr)
  "email-validator>=2.1.0",

  # Observability
  "langsmith>=0.1.20"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
"" = "."